# elliot

./: .gitignore  README.md  main.py  pyproject.toml  tools.py
elliot/: __init__.py  __main__.py  agent.py  cli.py  output.py  plan.py  tools.py
