[project]
name = "elliot"
version = "0.1.0"
description = "Simple Coding Agent"
authors = [
    { "name" = "ExpressGradient", "email" = "johndoeknown@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6.6",
    "openai>=1.100.0",
    "rich>=14.1.0",
]
