[project]
name = "elliot"
version = "0.1.0"
description = "Coding Agents Orchestrator"
authors = [{name = "ExpressGradient", email = "johndoeknown@protonmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ast-grep-cli>=0.39.5",
    "openai>=2.0.0",
    "openai-agents>=0.1.0",
    "rich>=14.2.0",
]
