[project]
name = "elliot"
version = "0.1.0"
description = "Coding Agents Orchestrator"
authors = [{name = "ExpressGradient", email = "johndoeknown@protonmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ast-grep-cli>=0.39.5",
    "openai>=2.0.0",
    "openai-agents>=0.1.0",
    "rich>=14.2.0",
    "ruff>=0.14.0",
]

[project.scripts]
elliot = "elliot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["elliot*"]
